[gd_scene load_steps=5 format=3 uid="uid://daju8scpvco50"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_titeb"]
[ext_resource type="PackedScene" uid="uid://dmu2kvc74b2pt" path="res://taser_gun.tscn" id="2_7mp5v"]
[ext_resource type="PackedScene" uid="uid://dqd2byysjmktq" path="res://flash_light.tscn" id="2_oarey"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d5awb"]
radius = 0.24
height = 1.8

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_titeb")
run_speed = 8
walk_speed = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.939147, 0)
shape = SubResource("CapsuleShape3D_d5awb")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.36471, 0)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
target_position = Vector3(0, 0, -1.5)
collide_with_areas = true
collide_with_bodies = false

[node name="SpotLight3D" type="SpotLight3D" parent="Camera3D"]
light_energy = 0.0
shadow_enabled = true
spot_range = 15.0

[node name="BulletCollision" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(10, 0, 0, 0, -4.37114e-07, -10, 0, 10, -4.37114e-07, 0.00374269, 0, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="InteractionNotifier" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -13.0
offset_right = 56.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Press E to Use"

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
offset_left = 16.0
offset_right = 168.0
offset_bottom = 48.0

[node name="CollectionTracker" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Switches 0 / 10"

[node name="ExitDoorTracker" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Go to the Exit Door"

[node name="taser_mesh" parent="." instance=ExtResource("2_7mp5v")]
transform = Transform3D(-10, 0, -8.74228e-07, 0, 10, 0, 8.74228e-07, 0, -10, 0.32506, 1.1909, -0.2431)

[node name="flashLight" parent="." instance=ExtResource("2_oarey")]
transform = Transform3D(-4.37114e-09, 0, 0.1, 0, 0.1, 0, -0.1, 0, -4.37114e-09, -0.378928, 1.2, -0.364498)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
